# pixelReforge

./: .gitignore  README.en.md  README.md  pyproject.toml
docs/: cli.en.md  cli.md  development.en.md  development.md  mcp.en.md  mcp.md
pixel_reforge/: __init__.py  __main__.py  cli.py  config.py  fingerprint.py  models.py  naming.py  processor.py  scanner.py  state.py  workflow.py
pixel_reforge/mcp_adapter/: __init__.py  server.py  worker.py
tests/: __init__.py  test_cli.py  test_config.py  test_fingerprint.py  test_naming.py  test_processor.py  test_scanner.py  test_state.py  test_workflow.py
tests/mcp_adapter/: __init__.py  test_server.py  test_stdio.py  test_worker.py
